#124 #108 Fixed a few bugs such as aligning sign in red dot, removed Today button on calendar since didnt work and was redundant and export button no longer turns red when you click on it. Lastly updated test case for remove a course and added a calendar test case.

--- a/src/app/components/app.scss
+++ b/src/app/components/app.scss
@@ -112,9 +112,9 @@ div.trans-sc{
   background: rgb(66, 183, 42);
   border-radius: 50%;
   display: inline-block;
-  height: 6px;
+  height: 8px;
   margin-left: 4px;
-  width: 6px;
+  width: 8px;
   margin-bottom: 5px;
 }
 
@@ -122,9 +122,10 @@ div.trans-sc{
   background:  #B4131B;
   border-radius: 50%;
   display: inline-block;
-  height: 6px;
+  height: 8px;
   margin-left: 4px;
-  width: 6px;
+  width: 8px;
+  margin-bottom: 5px;
 }
 
 .btn-status {
